force-app/main/default/objects/Stage__c/fields/Stage_Order__c.field-meta.xml
<CustomField>
    <fullName>Stage_Order__c</fullName>
    <label>Stage Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>