force-app/main/default/objects/Stage__c/fields/Stage_Type__c.field-meta.xml
<CustomField>
    <fullName>Stage_Type__c</fullName>
    <label>Stage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Rollback</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>