force-app/main/default/objects/Stage__c/fields/Target_Environment__c.field-meta.xml
<CustomField>
    <fullName>Target_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Environment</label>
    <referenceTo>Deployment_Environment__c</referenceTo>
    <relationshipLabel>Stages</relationshipLabel>
    <relationshipName>Stages</relationshipName>
    <type>Lookup</type>
</CustomField>